# reasonReactCommentSystem

./: .gitignore  LICENSE  Makefile  README.md  dune  dune-project  package-lock.json  package.json  reasonReactCommentSystem.opam  webpack.config.js
.github/workflows/: main.yml
backend/: build.gradle.kts
backend/src/main/kotlin/com/example/ITMOhw3/: CommentController.kt  CommentModel.kt  LoginController.kt  RegistrationController.kt
backend/src/main/kotlin/com/example/ITMOhw3/configuration/: WebSecurityConfig.kt
backend/src/main/kotlin/com/example/ITMOhw3/user/: User.kt  UserService.kt  Users.kt
backend/src/main/resources/static/: index.css
public/: index.html  main.js
src/: ReactApp.re  dune
src/components/authorization-page/: AuthorizationPage.re  dune
src/components/chats-page/: ChatsPage.re  dune
src/components/comment/: Comment.re  dune
src/components/comment-page/: CommentPage.re  dune
src/components/comments-container/: CommentsContainer.re  dune
src/components/error-page/: ErrorPage.re  dune
src/components/form/: Form.re  dune
src/components/util/: CommentType.re  Exceptions.re  dune
