opam-version: "2.0"
synopsis: "Reason React comment system"
description: "Functional programming fourth assignment"
maintainer: ["Boyko Vladislav"]
authors: ["Boyko Vladislav"]
license: "MIT"
homepage: "https://github.com/Leatherlord/reasonReactCommentSystem"
bug-reports: "https://github.com/Leatherlord/reasonReactCommentSystem/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "melange-fetch" { >= "0.1.0"}
  "melange-json" {>= "1.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/Leatherlord/reasonReactCommentSystem.git"
